0.29_02 2021-01-03

* Add write_json method based on File::JSON::Slurper

0.29 2020-12-24
* Allow options in new, create_json, and create_json_strict
* Add "set" to set most of the options
* Add sorting of indented output by key
* Add user-defined sort

0.28 2020-11-24
* Test context-dependent variables & use numerical part only if valid.

0.27 2020-11-22
* Add indentation of output
* Use integer not string for all context-dependent variables

0.26 2020-11-22
* Use string with quotes for integer context-dependent variables

0.25 2020-02-14
* Bug fix for uninitialised arrays

0.24 2017-06-13
* Windows compilation

0.23 2017-06-06
* Update PP module
* Update documentation links to metacpan

0.22 2016-07-15
* Handle strings with leading zeros which look like numbers.

0.21 2016-06-28
* Tests changed for Perl 5.25 regex changes.

0.20 2016-01-23
* Add a "strict" mode

0.19 2015-12-31
* Better documentation of Unicode handling.
* Unicode upgrade applied for callback return values.
* UTF-8 check applied for callback return values.

0.18 2015-12-30
* Better documentation of Unicode handling.
* Add "downgrade_utf8" method (experimental).

0.17 2015-12-29
* Add handlers for NaN and infinity.
* Documented how to remove values set by obj_handler or type_handler.

0.16 2015-12-26
* Change required version of JSON::Parse to 0.38.

0.15 2015-12-24
* Test repo is updated correctly.
* Added response to dishonest review of module.

0.14 2015-11-08
* Returning the undefined value causes a halt of execution
* Validates four byte UTF-8 correctly
* Pure Perl module now fully compatible with XS module.

0.13 2015-11-07
* Add "obj_handler" method which hands all objects to the user
* Load PP module if XSLoader fails

0.12 2015-11-02
* String processing improvements
* Fix bug in JavaScript escaping
* Fix bug in 4-byte UTF-8 strings
* "replace_bad_utf8" method added.

0.10 2015-11-02
* Implement more complete Unicode support, including validation.