@@ -1,6 +1,8 @@
 0.29_02 2021-01-03
 
 * Add write_json method based on File::JSON::Slurper
+* Change create_json and the set method to be in XS for better
+  performance
 
 0.29 2020-12-24
 * Allow options in new, create_json, and create_json_strict
